<resources>
    <string name="app_name">Notes</string>
    <string name="icons_trash" translatable="false">&#xe900;</string>
    <string name="icons_times" translatable="false">&#xe901;</string>
    <string name="icons_star_filled" translatable="false">&#xe902;</string>
    <string name="icons_star" translatable="false">&#xe903;</string>
    <string name="icons_sort" translatable="false">&#xe904;</string>
    <string name="icons_plus" translatable="false">&#xe905;</string>
    <string name="icons_more_info" translatable="false">&#xe906;</string>
    <string name="icons_menu" translatable="false">&#xe913;</string>
    <string name="icons_folder" translatable="false">&#xe908;</string>
    <string name="icons_edit" translatable="false">&#xe909;</string>
    <string name="icons_check" translatable="false">&#xe90a;</string>
    <string name="icons_back" translatable="false">&#xe90b;</string>
    <string name="icons_backup" translatable="false">&#xe90c;</string>
    <string name="icons_restore" translatable="false">&#xe90d;</string>
    <string name="icons_setting" translatable="false">&#xe90e;</string>
    <string name="icons_grid" translatable="false">&#xe90f;</string>
    <string name="icons_linear" translatable="false">&#xe910;</string>
    <string name="icons_note" translatable="false">&#xe912;</string>
    <string name="icons_restore_trash" translatable="false">&#xe907;</string>
    <string name="icons_move_folder" translatable="false">&#xe911;</string>
    <string name="updating">Updating, Please wait</string>
    <string name="notice_backup">Backup File is will save in downloads\nIf erase the .db, might not be able to back up.</string>
    <string name="notice_restore">Backup File is must be in downloads</string>
    <string name="help_restore">(Name).db</string>
    <string name="sortByCreatedDate">Sort by created date</string>
    <string name="sortByModifiedDate">Sort by modified date</string>
    <string name="SortByReverse">Sort by reverse</string>
    <string name="onlyShowTitle">Show title only</string>
    <string name="enterCreatedDate">Change created date</string>
    <string name="enterModifiedDate">Change modified date</string>
    <string name="folder">Folder</string>
    <string name="note">Note</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="favorites">Favorites</string>
    <string name="restore">Restore</string>
    <string name="backup">Backup</string>
    <string name="folderName">Folder name</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="minute">Minute</string>
    <string name="hour">Hour</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ask_delete">Do you want to delete this?</string>
    <string name="ask_delete_theme">Do you want to delete this theme?</string>
    <string name="ask_update">Are you sure you don\'t save this changed note?</string>
    <string name="ask_add">Are you sure you don\'t save this note?</string>
    <string name="move_to_other">Move</string>
    <string name="createdDate">Created date:</string>
    <string name="modifiedDate">Modified date:</string>
    <string name="successBackup">Success</string>
    <string name="successRestore">Success</string>
    <string name="trashActivity">Trash</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="settingActivity">Setting</string>
    <string name="about_onlyShowTitle">Show title only is default when create the note</string>
    <string name="about_hideFavs">Don\'t show favorites when open the app</string>
    <string name="failToBackup">Failed</string>
    <string name="failToRestore">Failed</string>
    <string name="cannotFind">Can\'t find backup file</string>
    <string name="empty">Empty</string>
    <string name="trash_description">Items in the Trash will be permanently deleted after 30 days.</string>
    <string name="delete">Delete</string>
    <string name="notEmptyPlease__folder">You can\'t save empty title folder</string>
    <string name="upgrade_to_premium">Upgrade to premium</string>
    <string name="restore_purchased">Restore Purchased</string>
    <string name="wait">wait a minute....</string>
    <string name="about_theme">Theme: </string>
    <string name="themeTitle_light">Default light theme</string>
    <string name="themeTitle_dark">Default dark theme</string>
    <string name="color_totalBlack">Default Full Black</string>
    <string name="color_darkBlack">Default Dark Black</string>
    <string name="color_lightBlack">Default Light Black</string>
    <string name="color_darkGray">Default Dark Gray</string>
    <string name="color_middleGray">Default Middle Gray</string>
    <string name="color_lightGray">Default Light Gray</string>
    <string name="color_totalWhite">Default White</string>
    <string name="color_lightBlue">Default Light Blue</string>
    <string name="add_theme">Add theme</string>
    <string name="choose_template">Choose template</string>
    <string name="color_actionBarBack">ActionBar background color: </string>
    <string name="color_actionBarText">ActionBar text color: </string>
    <string name="color_actionBarIcon">ActionBar Icon color: </string>
    <string name="color_mainItemBack">Note or Folder background color: </string>
    <string name="color_mainItemText">Note or Folder text color: </string>
    <string name="color_mainItemIcon">Note or Folder Icon color: </string>
    <string name="color_mainViewBack">Note or Folders view background color: </string>
    <string name="color_floatingBtnText">FloatingButton text color: </string>
    <string name="color_floatingBtnIcon">FloatingButton icon color: </string>
    <string name="color_floatingBtn">FloatingButton background color: </string>
    <string name="theme_NavMenuBack">Navigation menu background color: </string>
    <string name="theme_NavMenuIcon">Navigation menu icon color: </string>
    <string name="theme_NavMenuText">Navigation menu text color: </string>
    <string name="theme_PopupMenuBack">Popup menu background color: </string>
    <string name="theme_PopupMenuIcon">Popup menu icon color: </string>
    <string name="theme_PopupMenuDisabledIcon">Popup menu disabled icon color: </string>
    <string name="theme_PopupMenuText">Popup menu text color: </string>
    <string name="theme_dialogBack">Popup background color: </string>
    <string name="theme_dialogText">Popup text color: </string>
    <string name="theme_dialogHint">Popup hint color: </string>
    <string name="theme_dialogIcon">Popup icon color: </string>
    <string name="theme_dialogCheckbox">Popup checkbox color: </string>
    <string name="theme_editNoteBack">Background color: </string>
    <string name="theme_editNoteText">Text color: </string>
    <string name="theme_editNoteHint">Hint color: </string>
    <string name="theme_editNoteIcon">Icon color: </string>
    <string name="theme_statusBarBack">StatusBar background color: </string>
    <string name="theme_statusBarText">StatusBar text color: </string>
    <string name="theme_TrashBack">Background color: </string>
    <string name="theme_TrashText">Text color: </string>
    <string name="theme_TrashIcon">Icon color: </string>
    <string name="theme_TrashItemBack">Background color: </string>
    <string name="theme_TrashItemText">Text color: </string>
    <string name="theme_SettingBack">Background color: </string>
    <string name="theme_SettingText">Text color: </string>
    <string name="theme_SettingIcon">Icon color: </string>
    <string name="theme_SettingCheckbox">Checkbox color: </string>
    <string name="theme_bottomSheetBack">BottomSheet background color: </string>
    <string name="theme_bottomSheetText">BottomSheet text color: </string>
    <string name="theme_bottomSheetIcon">BottomSheet icon color: </string>
    <string name="theme_bottomSheetCheckbox">BottomSheet checkbox color: </string>
    <string name="theme_name">Theme name</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="opacity">Opacity</string>
    <string name="blue">Blue</string>
    <string name="color_name">Color Name</string>
    <string name="percent" translatable="false">%</string>
    <string name="hundred" translatable="false">100</string>
    <string name="zero" translatable="false">0</string>
    <string name="fail_verify_purchase">Failed to verify purchased</string>
    <string name="require_purchase">Only premium can add theme</string>
    <string name="theme_data_title_status_bar_background">status bar background</string>
    <string name="theme_data_title_status_bar_text_color">status bar text color</string>
    <string name="theme_data_title_navigation_bar_background">nav bar background</string>
    <string name="theme_data_title_navigation_bar_icon_color">nav bar icon color</string>
    <string name="theme_data_title_note_background">note back</string>
    <string name="theme_data_title_note_text_color">note text</string>
    <string name="theme_data_title_note_icon_color">note icon</string>
    <string name="theme_data_title_folder_background">folder back</string>
    <string name="theme_data_title_folder_text_color">folder text</string>
    <string name="theme_data_title_folder_icon_color">folder icon</string>
    <string name="theme_data_title_background">back</string>
    <string name="theme_data_title_text_color">text</string>
    <string name="theme_data_title_text_highlight_color">highlight text</string>
    <string name="theme_data_title_icon_color">icon</string>
    <string name="theme_data_title_checkbox_color">checkbox</string>
    <string name="theme_data_title_nav_menu_background">nav menu back</string>
    <string name="theme_data_title_nav_menu_text_color">nav menu text</string>
    <string name="theme_data_title_nav_menu_icon_color">nav menu icon</string>
    <string name="theme_data_title_favorite_text_color">fav text color</string>
    <string name="theme_data_title_favorite_icon_color">fav icon</string>
    <string name="theme_data_title_floating_button_background">float button back</string>
    <string name="theme_data_title_floating_button_text_color">float button text</string>
    <string name="theme_data_title_floating_button_icon_color">float button icon</string>
    <string name="theme_data_title_popup_menu_background">popup menu back</string>
    <string name="theme_data_title_popup_menu_text_color">popup menu text</string>
    <string name="theme_data_title_popup_menu_icon_color">popup menu icon</string>
    <string name="theme_data_title_popup_menu_disabled_icon_color">popup menu dis icon</string>
    <string name="theme_data_title_dialog_background">popup back</string>
    <string name="theme_data_title_dialog_text_color">popup text</string>
    <string name="theme_data_title_dialog_text_highlight_color">popup highlight text</string>
    <string name="theme_data_title_dialog_icon_color">popup icon</string>
    <string name="theme_data_title_dialog_checkbox_color">popup checkbox</string>
    <string name="theme_data_title_bottom_sheet_background">bottom_sheet back</string>
    <string name="theme_data_title_bottom_sheet_text_color">bottom_sheet text</string>
    <string name="theme_data_title_bottom_text_highlight_color">bottom_sheet highlight text</string>
    <string name="theme_data_title_bottom_sheet_icon_color">bottom_sheet icon</string>
    <string name="theme_data_title_bottom_sheet_checkbox_color">bottom_sheet checkbox</string>
    <string name="theme_data_title_bottom_sheet_handle_color">bottom_sheet handle</string>
    <string name="set_as_default_dark_theme">Set as default darkTheme</string>
    <string name="set_as_default_light_theme">Set as default lightTheme</string>
    <string name="example">Example: </string>
    <string name="login">Login</string>
    <string name="register">register</string>
</resources>