<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@color/background"
    android:layout_alignParentTop="true"
    android:id="@+id/actionBar_v2">

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="@dimen/btn_actionBar"
        android:layout_height="@dimen/btn_actionBar"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="7.5dp"
        android:background="?selectableItemBackgroundBorderless"
        android:fontFamily="@font/icons_font"
        android:textSize="@dimen/icon_actionBar"
        android:text="@string/icons_check"
        android:textColor="@color/black"
        android:gravity="center"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/folder_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textIsSelectable="true"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/moveButton"
            android:layout_width="@dimen/btn_actionBar"
            android:layout_height="@dimen/btn_actionBar"
            android:background="?selectableItemBackgroundBorderless"
            android:fontFamily="@font/icons_font"
            android:gravity="center"
            android:text="@string/icons_move_folder"
            android:textColor="@color/black"
            android:textSize="@dimen/icon_actionBar"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="@dimen/btn_actionBar"
            android:layout_height="@dimen/btn_actionBar"
            android:background="?selectableItemBackgroundBorderless"
            android:fontFamily="@font/icons_font"
            android:gravity="center"
            android:text="@string/icons_trash"
            android:textColor="@color/black"
            android:textSize="@dimen/icon_actionBar"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btn_show_menu"
            android:layout_width="@dimen/btn_actionBar"
            android:layout_height="@dimen/btn_actionBar"
            android:background="?selectableItemBackgroundBorderless"
            android:fontFamily="@font/icons_font"
            android:gravity="center"
            android:text="@string/icons_menu"
            android:textColor="@color/black"
            android:textSize="@dimen/icon_actionBar"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_ShowPopupMenu"
            android:layout_width="@dimen/btn_actionBar"
            android:layout_height="@dimen/btn_actionBar"
            android:background="?selectableItemBackgroundBorderless"
            android:fontFamily="@font/icons_font"
            android:gravity="center"
            android:text="@string/icons_sort"
            android:textColor="@color/black"
            android:textSize="@dimen/icon_actionBar"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="@dimen/btn_actionBar"
        android:layout_height="@dimen/btn_actionBar"
        android:background="?selectableItemBackgroundBorderless"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/icons_font"
        android:gravity="center"
        android:text="@string/icons_times"
        android:textColor="@color/black"
        android:textSize="@dimen/icon_actionBar"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_okOnRight"
        android:layout_width="@dimen/btn_actionBar"
        android:layout_height="@dimen/btn_actionBar"
        android:background="?selectableItemBackgroundBorderless"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/icons_font"
        android:gravity="center"
        android:text="@string/icons_check"
        android:textColor="@color/black"
        android:textSize="@dimen/icon_actionBar"
        android:visibility="gone"/>

</RelativeLayout>