<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background"
    android:id="@+id/backgroundView"
    tools:context=".activity.TrashActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            android:id="@+id/backButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/icons_back"
            android:textColor="@color/black"
            android:fontFamily="@font/icons_font"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/backButton"
            android:layout_toRightOf="@id/backButton"
            android:gravity="center"
            android:text="@string/trashActivity"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/emptyButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:background="?selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/empty"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/trash_description"
        android:padding="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:overScrollMode="never"
            android:layout_marginHorizontal="10dp"
            android:layout_alignParentTop="true"
            android:layout_above="@id/btnSet"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnSet"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:id="@+id/btn_restore"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/btn_delete"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="vertical"
                android:gravity="center"
                android:background="?selectableItemBackgroundBorderless">

                <TextView
                    android:id="@+id/icon_restore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/icons_font"
                    android:text="@string/icons_restore_trash"
                    android:textSize="30sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/text_restore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restore"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>



            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_delete"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/btn_restore"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="vertical"
                android:gravity="center"
                android:background="?selectableItemBackgroundBorderless">

                <TextView
                    android:id="@+id/icon_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/icons_font"
                    android:text="@string/icons_trash"
                    android:textSize="30sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/text_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

</LinearLayout>