<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_note"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="LabelFor"
    android:background="@color/white">

    <EditText
        android:id="@+id/input_title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:autofillHints="no"
        android:background="@null"
        android:gravity="center_vertical"
        android:inputType="text"
        android:overScrollMode="never"
        android:scrollHorizontally="true"
        android:shadowColor="#00000000"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:hint="@string/title" />

    <ScrollView
        android:id="@+id/writeNoteScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="40dp"
        android:fillViewport="true">

        <!--        <FrameLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent">-->

        <EditText
            android:id="@+id/input_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:autofillHints="no"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/content"
            android:inputType="textMultiLine"
            android:overScrollMode="never"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <!--            <WebView-->
        <!--                android:id="@+id/webView"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"/>-->

        <!--        </FrameLayout>-->


    </ScrollView>


    <Button
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:background="?selectableItemBackground"
        android:fontFamily="@font/icons_font"
        android:gravity="center"
        android:text="@string/icons_back"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="40dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_input_detail"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?selectableItemBackground"
                android:fontFamily="@font/icons_font"
                android:gravity="center"
                android:text="@string/icons_more_info"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="SpUsage"/>

            <Button
                android:visibility="gone"
                android:id="@+id/btn_image"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?selectableItemBackground"
                android:fontFamily="@font/icons_font"
                android:gravity="center"
                android:text="@string/icons_note"
                android:textColor="@color/black"
                android:textSize="20dp"
                tools:ignore="SpUsage" />

            <Button
                android:visibility="gone"
                android:id="@+id/btn_connect"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?selectableItemBackground"
                android:fontFamily="@font/icons_font"
                android:gravity="center"
                android:text="@string/icons_edit"
                android:textColor="@color/black"
                android:textSize="20dp"
                tools:ignore="SpUsage" />

        </LinearLayout>

    </HorizontalScrollView>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginVertical="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="?selectableItemBackground"
        android:gravity="center"
        android:text="@string/icons_check"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/icons_font"/>

</RelativeLayout>