<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/backButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="5dp"
                android:background="?selectableItemBackgroundBorderless"
                android:fontFamily="@font/icons_font"
                android:gravity="center"
                android:text="@string/icons_back"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/settingTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/settingActivity"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="35dp"
                android:layout_marginRight="35dp"
                android:gravity="center_vertical"
                android:padding="@dimen/padding_setting"
                android:text="@string/about_onlyShowTitle"
                android:textColor="@color/text_setting"
                android:textIsSelectable="true"
                android:textSize="@dimen/text_setting"
                tools:ignore="RelativeOverlap" />

            <CheckBox
                android:id="@+id/isDefault_onlyShowTitle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="5dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="35dp"
                android:layout_marginRight="35dp"
                android:gravity="center_vertical"
                android:padding="@dimen/padding_setting"
                android:text="@string/about_hideFavs"
                android:textColor="@color/text_setting"
                android:textIsSelectable="true"
                android:textSize="@dimen/text_setting"
                tools:ignore="RelativeOverlap,TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/isDefault_hideFavs"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="5dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_setting"
            android:text="@string/about_theme"
            android:textColor="@color/text_setting"
            android:textSize="@dimen/text_setting" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/themeSelector"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="vertical" />

        <Button
            android:id="@+id/addThemeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:background="@drawable/button_rounded"
            android:padding="15dp"
            android:text="@string/add_theme"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <EditText
            android:visibility="gone"
            android:id="@+id/nameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="name"/>

        <EditText
            android:visibility="gone"
            android:id="@+id/urlInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="http://yourUrl:5000/"/>

        <Button
            android:visibility="gone"
            android:id="@+id/saveURL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="save"/>

        <Button
            android:visibility="gone"
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/button_rounded"
            android:padding="15dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:visibility="gone"
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"/>
    </LinearLayout>

</ScrollView>